k8s/overlays/dev/ingress-infra.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-ui
  namespace: semanix-dev
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: grafana.dev.semanix.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
  - host: prometheus.dev.semanix.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
  - host: rabbitmq.dev.semanix.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
  - host: consul.dev.semanix.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: consul
            port:
              number: 8500
  - host: vault.dev.semanix.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              number: 8200
